test/OldASTBuildFailure/new.cpp
// CHECK: fatal error: failed to process the ASTs of the old library
